Fix strange compilation issue